# python_midi_training

./: .aiexclude  01_setup_and_download.ipynb  03_annotation.ipynb  04_embedding_and_search.ipynb  04_standalone_encoder.ipynb  05_convert_standalone_to_TFLite.ipynb  05_standalone_encoder.ipynb  06_convert_standalone_to_TFLite.ipynb  06_model_comparison.ipynb  07_embedding_and_search.ipynb  07_model_comparison.ipynb  08_standalone_decoder.ipynb  09_decoder_model_comparison.ipynb  10_debugging.ipynb  10a_tf1_debugging.ipynb  README.md  generate_tf1_references.py  install.sh  test_installation.py
R/: 01_analyse_embeddings.R
cpp/: CMakeLists.txt  README.md  build instructions tensorflow.txt  encoder.cpp
model_def/: decoder.py
